template django change

--- a/backend/templates/page-starter.html
+++ b/backend/templates/page-starter.html
@@ -1,34 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
+{% extends 'admin-base.html' %}
+{% block title %}
 
-	<title>Blank Page - Zeiss Template</title>
+{% endblock title %}
 
-	<!-- Main Styles -->
-	<link rel="stylesheet" href="assets/styles/style.min.css">
-	
-	<!-- Material Design Icon -->
-	<link rel="stylesheet" href="assets/fonts/material-design/css/materialdesignicons.css">
-
-	<!-- mCustomScrollbar -->
-	<link rel="stylesheet" href="assets/plugin/mCustomScrollbar/jquery.mCustomScrollbar.min.css">
-
-	<!-- Waves Effect -->
-	<link rel="stylesheet" href="assets/plugin/waves/waves.min.css">
-
-	<!-- Sweet Alert -->
-	<link rel="stylesheet" href="assets/plugin/sweet-alert/sweetalert.css">
-	
-	<!-- Color Picker -->
-	<link rel="stylesheet" href="assets/color-switcher/color-switcher.min.css">
-</head>
-
-<body>
+{% block content %}
 <div class="main-menu">
 	<header class="header">
 		<a href="index.html" class="logo">Zeiss</a>
@@ -403,41 +378,7 @@
 	</div>
 	<!-- /.content -->
 </div>
-<!-- #color-switcher -->
 
-<div id="wrapper">
-	<div class="main-content">
-		
-		<footer class="footer">
-			<ul class="list-inline">
-				<li>2016 © NinjaAdmin.</li>
-				<li><a href="#">Privacy</a></li>
-				<li><a href="#">Terms</a></li>
-				<li><a href="#">Help</a></li>
-			</ul>
-		</footer>
-	</div>
-	<!-- /.main-content -->
-</div><!--/#wrapper -->
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-		<script src="assets/script/html5shiv.min.js"></script>
-		<script src="assets/script/respond.min.js"></script>
-	<![endif]-->
-	<!-- 
-	================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="assets/scripts/jquery.min.js"></script>
-	<script src="assets/scripts/modernizr.min.js"></script>
-	<script src="assets/plugin/bootstrap/js/bootstrap.min.js"></script>
-	<script src="assets/plugin/mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
-	<script src="assets/plugin/nprogress/nprogress.js"></script>
-	<script src="assets/plugin/sweet-alert/sweetalert.min.js"></script>
-	<script src="assets/plugin/waves/waves.min.js"></script>
-	<!-- Full Screen Plugin -->
-	<script src="assets/plugin/fullscreen/jquery.fullscreen-min.js"></script>
 
-	<script src="assets/scripts/main.min.js"></script>
-	<script src="assets/color-switcher/color-switcher.min.js"></script>
-</body>
-</html>
+
+{% endblock content %}
