--- a/backend/templates/page-lock-screen.html
+++ b/backend/templates/page-lock-screen.html
@@ -1,21 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
+{% extends 'admin-base.html' %}
+{% block title %}
 
-	<title>Home</title>
-	<link rel="stylesheet" href="assets/styles/style.min.css">
+{% endblock title %}
 
-	<!-- Waves Effect -->
-	<link rel="stylesheet" href="assets/plugin/waves/waves.min.css">
 
-</head>
-
-<body>
+{% block content %}
 
 <div id="single-wrapper">
 	<form action="#" class="frm-single">
@@ -38,20 +27,4 @@
 	<!-- /.frm-single -->
 </div><!--/#single-wrapper -->
 
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
-		<script src="assets/script/html5shiv.min.js"></script>
-		<script src="assets/script/respond.min.js"></script>
-	<![endif]-->
-	<!-- 
-	================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="assets/scripts/jquery.min.js"></script>
-	<script src="assets/scripts/modernizr.min.js"></script>
-	<script src="assets/plugin/bootstrap/js/bootstrap.min.js"></script>
-	<script src="assets/plugin/nprogress/nprogress.js"></script>
-	<script src="assets/plugin/waves/waves.min.js"></script>
-
-	<script src="assets/scripts/main.min.js"></script>
-</body>
-</html>
+{% endblock content %}
